--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,9 @@ extract_log.txt
 __pycache__/
 venv/
 nul
+
+# Xcode / iOS
+ios/**/xcuserdata/
+ios/**/.build/
+ios/**/DerivedData/
+*.xcworkspace/xcuserdata/
